[package]
name = "tooler"
version = "0.2.0"
edition = "2024"
description = "A modular CLI toolkit"
authors = ["Antonio Ventura <antonioventura.j@gmail.com>"]

[[bin]]
name = "tooler"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
clap_complete = "4"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"
serde_yaml = "0.9"
